kubernetes/service.yml
kind: Service
apiVersion: v1

metadata:
  name: app-svc
  namespace: app-namespace

spec:
  selector:
    app: react-app

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
